Added accordion function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="./nav.js"></script>
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </head>
 <body class="bg-[#151515]">
@@ -152,94 +151,115 @@
     </div>
     <!-- headline end -->
       <!-- item faq start -->
-      <div class="flex justify-between items-center mb-8">
-        <div>
-          <p class="text-sm md:text-xl font-medium">
-            What is the best price I can get for assessing many candidates?
-          </p>
-           <!-- hidden text start  -->
-        <p></p>
-        <!-- hidden text end -->
-        </div>
-        <!-- button start -->
-        <div>
+      <div class="faq">
+        <div class="question">
+          <h2 class="text-sm md:text-lg font-semibold">What are the different steps in campus hiring and which steps can I use Equip for?</h2>
           <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
         </div>
-        <!-- button end -->
-      </div>
-      <!-- item faq end  --> 
-       <!-- item faq start -->
-       <div class="flex justify-between items-center mb-8">
-        <div>
-          <p class="text-sm md:text-xl font-medium">
-            How many students can take the assessment simultaneously?
+        <!-- hidden text start  -->
+        <div class="answer mt-8">
+          <p class="mb-5 text-sm md:text-lg">
+            Typically, the campus recruitment process includes four steps: pre-placement talk, conducting aptitude and technical skill tests, interviewing the shortlisted candidates and extending the job offer to the candidates. Equip helps you automate conducting aptitude and technical skill tests so that you can save time by shortlisting the most eligible candidates for interviews.
           </p>
-           <!-- hidden text start  -->
-        <p></p>
+        </div>
         <!-- hidden text end -->
-        </div>
-        <!-- button start -->
-        <div>
-          <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
-        </div>
-        <!-- button end -->
       </div>
       <!-- item faq end  --> 
-           <!-- item faq start -->
-           <div class="flex justify-between items-center mb-8">
-            <div>
-              <p class="text-sm md:text-xl font-medium">
-                Are the assessments automatically graded?
-              </p>
-               <!-- hidden text start  -->
-            <p></p>
-            <!-- hidden text end -->
-            </div>
-            <!-- button start -->
-            <div>
-              <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
-            </div>
-            <!-- button end -->
+         <!-- item faq start -->
+         <div class="faq">
+          <div class="question">
+            <h2 class="text-sm md:text-lg font-semibold">What is the best price I can get for assessing many candidates?</h2>
+            <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
           </div>
-          <!-- item faq end  --> 
+          <!-- hidden text start  -->
+          <div class="answer mt-8">
+            <p class="mb-5 text-sm md:text-lg">
+              The pricing is based on your usage. You will use one credit for every candidate attempting the assessment. One credit costs Rs. 82. We offer discounts on bulk purchases of credits. For example, you get 40% off on buying 1000 credits. All <a href="https://equip.co/pricing"><u>discounts</u></a> are listed here to Looking for discounts on pricing page
+            </p>
+          </div>
+          <!-- hidden text end -->
+        </div>
+        <!-- item faq end  --> 
+            <!-- item faq start -->
+            <div class="faq">
+              <div class="question">
+                <h2 class="text-sm md:text-lg font-semibold">How many students can take the assessment simultaneously?</h2>
+                <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
+              </div>
+              <!-- hidden text start  -->
+              <div class="answer mt-8">
+                <p class="mb-5 text-sm md:text-lg">
+                  Our customers have successfully conducted over 8000 tests at once. If your requirement exceeds this number, <a href="#"><u>chat with us</u></a> to find out how we can customise it. 
+                </p>
+              </div>
+              <!-- hidden text end -->
+            </div>
+            <!-- item faq end  --> 
                <!-- item faq start -->
-       <div class="flex justify-between items-center mb-8">
-        <div>
-          <p class="text-sm md:text-xl font-medium accordion-header">
-            Why is Equip’s proctoring the best?
-          </p>
-           <!-- hidden text start  -->
-        <p></p>
-        <!-- hidden text end -->
-        </div>
-        <!-- button start -->
-        <div>
-          <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
-        </div>
-        <!-- button end -->
-      </div>
-      <!-- item faq end  --> 
-           <!-- item faq start -->
-           <div class="flex justify-between items-center mb-8">
-            <div>
-              <p class="text-sm md:text-xl font-medium">
-                Can I send a unique link to every student for an Equip assessment?
-              </p>
-               <!-- hidden text start  -->
-            <p></p>
-            <!-- hidden text end -->
-            </div>
-            <!-- button start -->
-            <div>
-              <button>
-                <box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon>
-              </button>
-            </div>
-            <!-- button end -->
-          </div>
-          <!-- item faq end  --> 
+               <div class="faq">
+                <div class="question">
+                  <h2 class="text-sm md:text-lg font-semibold">What types of tests can I conduct on Equip?</h2>
+                  <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
+                </div>
+                <!-- hidden text start  -->
+                <div class="answer mt-8">
+                  <p class="mb-5 text-sm md:text-lg">
+                    You can conduct Quizzes, (Aptitude Test, Language Test, Attention to Detail) Programming Challenges (Coding, CSS, SQL), Spreadsheet Skills Test, and Video Interview.
+                    <br>
+You can also create and customise all of the above with your own content.
+                  </p>
+                </div>
+                <!-- hidden text end -->
+              </div>
+              <!-- item faq end  --> 
+                         <!-- item faq start -->
+                         <div class="faq">
+                          <div class="question">
+                            <h2 class="text-sm md:text-lg font-semibold">Are Equip assessments automatically graded?</h2>
+                            <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
+                          </div>
+                          <!-- hidden text start  -->
+                          <div class="answer mt-8">
+                            <p class="mb-5 text-sm md:text-lg">
+                              Yes, all assessments are graded automatically except tests containing Video Interviews, CSS Challenges and Short Text Answers.
+                            </p>
+                          </div>
+                          <!-- hidden text end -->
+                        </div>
+                        <!-- item faq end  --> 
+                          <!-- item faq start -->
+                          <div class="faq">
+                            <div class="question">
+                              <h2 class="text-sm md:text-lg font-semibold">Why is Equip’s proctoring the best?</h2>
+                              <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
+                            </div>
+                            <!-- hidden text start  -->
+                            <div class="answer mt-8">
+                              <p class="mb-5 text-sm md:text-lg">
+                                Equip is built by the same team that built AutoProctor. All Equip assessments AutoProctor for proctoring and we have successfully conducted <a href="https://workspace.google.com/marketplace/app/timer_+_proctor/691377974459"><u>15 million proctored assessments</u></a> across the world. 
+
+                              </p>
+                            </div>
+                            <!-- hidden text end -->
+                          </div>
+                          <!-- item faq end  --> 
+                           <!-- item faq start -->
+                           <div class="faq">
+                            <div class="question">
+                              <h2 class="text-sm md:text-lg font-semibold">Can I send a unique link to every student for an Equip assessment?</h2>
+                              <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
+                            </div>
+                            <!-- hidden text start  -->
+                            <div class="answer mt-8">
+                              <p class="mb-5 text-sm md:text-lg">
+                                Yes, you can send a unique one-time URL to each candidate. This reduces the chances of candidates cheating on the test by sharing the assessment link with others.
+                              </p>
+                            </div>
+                            <!-- hidden text end -->
+                          </div>
+                          <!-- item faq end  --> 
    </div>
    <!-- faq end -->
-   <script src="./accordion.js"></script>
+   <script src="./app.js"></script>
 </body>
 </html>
