--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
       <!-- headline -->
       <div class="text-white">
         <h1 class="text-3xl md:text-4xl mb-5 font-semibold">Equip Your Campus Hiring with Automated Skill Tests.</h1>
-        <p class="text-sm md:text-lg opacity-90 mb-5">Hire faster remotely and save cost per hire using a single assessment platform.</p>
+        <p class="text-sm md:text-lg opacity-90 mb-5">Use Equip’s Skill Tests for Campus Hiring to Save Time on</p>
+        <!-- check bullets start -->
+       <div class="md:flex">
+        <p class="text-sm md:text-lg opacity-90 mb-5 flex item-center"><box-icon name='check-circle' type='solid' color='#ffffff' class="mr-2" ></box-icon>Travelling</p>
+        <p class="text-sm md:text-lg opacity-90 mb-5 md:ml-5 flex item-center"><box-icon name='check-circle' type='solid' color='#ffffff' class="mr-2" ></box-icon>Creating Content</p>
+       </div>
+        <div class="md:flex">
+          <p class="text-sm md:text-lg opacity-90 mb-5 flex item-center"><box-icon name='check-circle' type='solid' color='#ffffff' class="mr-2" ></box-icon>Scheduling Tests</p>
+        <p class="text-sm md:text-lg opacity-90 mb-5 md:ml-5 flex item-center"><box-icon name='check-circle' type='solid' color='#ffffff' class="mr-2" ></box-icon>Grading Manually</p>
+        </div>
+        <p class="text-sm md:text-lg opacity-90 mb-5 flex item-center"><box-icon name='check-circle' type='solid' color='#ffffff' class="mr-2" ></box-icon>Arranging Supervisors</p>
+        <!-- check bullets end -->
         <a target="_blank" href="https://equip.co/account/login/?providers=linkedin&next_url=https%3A%2F%2Fequip.co%2Faccount%2Frecruiter-onboarding%2F">
           <button class="px-8 py-2 text-white rounded-full border">Start 14-day Free Trial</button>
         </a>
@@ -42,34 +53,37 @@
       </div>
       <!-- headline end -->
       <div class="my-auto mx-auto mt-5">
-        <img class="h-1/5 drop-shadow-xl" src="./images/student.png" alt="">
+        <img class="h-1/5 drop-shadow-xl" src="./images/hero-illustration.svg" alt="">
       </div>
       </div>    
    </div>
-   <!-- partners logo start  -->
-   <div class="p-8 pb-8 md:px-16 max-w-screen-2xl mx-auto">
-    <!-- headline start -->
-    <div>
-      <p class="text-white opacity-80 text-sm md:text-lg">Trusted by Our Customers to Conduct Campus Placements at Top Universities and Colleges</p>
-    </div>
-    <!-- headline end -->
-    <!-- logo images start -->
-    <div class="flex items-center mt-8 md:opacity-50 pb-4 md:pb-8">
-      <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-1.svg" alt="university logo">
-      <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-2.svg" alt="university logo">
-      <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-3.svg" alt="university logo">
-    </div>
-    <!-- logo images end -->
-   </div>
-   <!-- partners logo end -->
+  
    </div>
    <!-- hero section end  -->
+    <!-- partners logo start  -->
+    <div class="p-8 md:px-16 max-w-screen-2xl mx-auto">
+     <div class="border-b pb-8">
+       <!-- headline start -->
+       <div>
+        <p class="text-white opacity-80 text-sm md:text-lg md:text-center">Trusted by Our Customers to Conduct Campus Placements at Top Universities and Colleges</p>
+      </div>
+      <!-- headline end -->
+      <!-- logo images start -->
+      <div class="flex items-center justify-center mt-8 md:opacity-50 pb-4 md:pb-8">
+        <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-1.svg" alt="university logo">
+        <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-2.svg" alt="university logo">
+        <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-3.svg" alt="university logo">
+      </div>
+      <!-- logo images end -->
+     </div>
+     </div>
+     <!-- partners logo end -->
    <!-- efficient and effortless + icons start -->
-   <div class="p-8 md:p-16 mt-8 md:mt-16 md:max-w-screen-2xl mx-auto text-white">
+   <div class="p-8 md:p-16 mt-8 md:mt-8 md:max-w-screen-2xl mx-auto text-white">
     <!-- headline -->
     <div class="text-center">
       <h2 class="text-xl md:text-3xl font-semibold">
-        Conduct 100% Efficient and Effortless Campus Hiring Drives with Equip
+        Conduct 100% Efficient and Effortless Campus Hiring Drives
       </h2>
     </div>
     <!-- headline -->
@@ -78,14 +92,15 @@
             <!-- icons card start  -->
             <div class="p-4 text-center">
               <img class="h-12 md:h-auto mx-auto mb-5 mt-5 md:mt-0" src="./images/clipboard-list.svg" alt="features">
-              <h2 class="mb-3 text-lg md:text-xl font-semibold">Fully Remote</h2>
+              <h2 class="mb-3 text-lg md:text-xl font-semibold">Fully Remote changes to Save Travel Costs</h2>
               <p class="text-sm md:text-lg mx-auto">Conduct assessments without having to visit the college. Students can attempt them from their labs or homes.</p>
             </div>
             <!-- icons card end  -->
                   <!-- icons card start  -->
       <div class="p-4 text-center">
         <img class="h-12 md:h-auto mx-auto mb-5 mt-5 md:mt-0" src="./images/question-mark-circle.svg" alt="features">
-        <h2 class="mb-3 text-lg md:text-xl font-semibold">Question Banks</h2>
+        <h2 class="mb-3 text-lg md:text-xl font-semibold">Readymade Tests
+          Ensure no Cheating changes to Ensure No Cheating</h2>
         <p class="text-sm md:text-lg mx-auto">For most skills, question banks with hundreds of questions are available. So, you don't need to create any questions.</p>
       </div>
       <!-- icons card end  -->
@@ -112,7 +127,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 border-t">
       <!-- headline + text start -->
       <div class="mt-8 md:mt-16">
-        <h2 class="text-xl md:text-3xl mb-8 font-semibold">What Can Equip Do For You?</h2>
+        <h2 class="text-3xl md:text-4xl mb-8 font-semibold">What Can Equip Do For You?</h2>
         <p class="text-sm md:text-lg opacity-90 mb-5">1. Save your time to avoid going through every application to your job or interviewing every candidate that applies to the job.</p>
         <p class="text-sm md:text-lg opacity-90 mb-5">2. Create an assessment for testing technical and non-technical skills in under a minute using our Question Bank or by importing your own questions.</p>
         <p class="text-sm md:text-lg opacity-90 mb-5">3. See assessment results real-time and shortlist the top candidates for interviews.</p>
@@ -120,7 +135,7 @@
       <!-- headline + text end -->
       <!-- video start -->
       <div class="flex justify-center mt-8 md:mt-16">
-        <iframe width="90%" height="90%" src="https://www.youtube.com/embed/U4hhSJgOjCo" title="Equip: Hassle-free Remote Hiring" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="520px" height="316px" src="https://www.youtube.com/embed/U4hhSJgOjCo" title="Equip: Hassle-free Remote Hiring" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <!-- video end -->
     </div>
@@ -151,7 +166,7 @@
     </div>
     <!-- headline end -->
       <!-- item faq start -->
-      <div class="faq">
+      <div class="faq mb-5">
         <div class="question">
           <h2 class="text-sm md:text-lg font-semibold">What are the different steps in campus hiring and which steps can I use Equip for?</h2>
           <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
@@ -166,7 +181,7 @@
       </div>
       <!-- item faq end  --> 
          <!-- item faq start -->
-         <div class="faq">
+         <div class="faq mb-5">
           <div class="question">
             <h2 class="text-sm md:text-lg font-semibold">What is the best price I can get for assessing many candidates?</h2>
             <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
@@ -181,7 +196,7 @@
         </div>
         <!-- item faq end  --> 
             <!-- item faq start -->
-            <div class="faq">
+            <div class="faq mb-5">
               <div class="question">
                 <h2 class="text-sm md:text-lg font-semibold">How many students can take the assessment simultaneously?</h2>
                 <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
@@ -196,7 +211,7 @@
             </div>
             <!-- item faq end  --> 
                <!-- item faq start -->
-               <div class="faq">
+               <div class="faq mb-5">
                 <div class="question">
                   <h2 class="text-sm md:text-lg font-semibold">What types of tests can I conduct on Equip?</h2>
                   <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
@@ -213,7 +228,7 @@ You can also create and customise all of the above with your own content.
               </div>
               <!-- item faq end  --> 
                          <!-- item faq start -->
-                         <div class="faq">
+                         <div class="faq mb-5">
                           <div class="question">
                             <h2 class="text-sm md:text-lg font-semibold">Are Equip assessments automatically graded?</h2>
                             <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
@@ -228,7 +243,7 @@ You can also create and customise all of the above with your own content.
                         </div>
                         <!-- item faq end  --> 
                           <!-- item faq start -->
-                          <div class="faq">
+                          <div class="faq mb-5">
                             <div class="question">
                               <h2 class="text-sm md:text-lg font-semibold">Why is Equip’s proctoring the best?</h2>
                               <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
@@ -244,7 +259,7 @@ You can also create and customise all of the above with your own content.
                           </div>
                           <!-- item faq end  --> 
                            <!-- item faq start -->
-                           <div class="faq">
+                           <div class="faq mb-5">
                             <div class="question">
                               <h2 class="text-sm md:text-lg font-semibold">Can I send a unique link to every student for an Equip assessment?</h2>
                               <button><box-icon name='chevron-down' type='solid' color='#ffffff' ></box-icon></button>
