--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
- 
 </head>
 <body class="bg-[#151515]">
     <!-- navigation bar start  -->
@@ -41,16 +40,16 @@
         <span class="hidden md:inline">Campus</span> 
       </h1>
      
-      <div class="wrapper h-8 md:h-8 md:mb-5">
+      <div class="wrapper h-8 md:h-8 mb-5 md:mb-8">
         <p> 
           <span class="hidden md:inline">Hiring </span> 
           <span class="hidden md:inline">to Save Time</span> on</p>
-        <div class="words text-lg md:text-2xl">
-            <span>Travelling</span>
-            <span> Creating Content</span>
-            <span>Scheduling Tests</span>
-            <span>Grading Manually</span>
-            <span>Arranging Supervisors</span>
+        <div class="words h-8 md:h-14 text-lg md:text-3xl ml-2">
+            <span class="">Travelling</span>
+            <span class=""> Creating Content</span>
+            <span class="">Scheduling Tests</span>
+            <span class="">Grading Manually</span>
+            <span class="">Arranging Supervisors</span>
         </div>
     </div>
    </div>
@@ -59,10 +58,10 @@
         <a target="_blank" href="https://equip.co/account/login/?providers=linkedin&next_url=https%3A%2F%2Fequip.co%2Faccount%2Frecruiter-onboarding%2F">
           <button class="px-8 py-2 text-white text-sm md:text-lg rounded-full border">Start 14-day Free Trial</button>
         </a>
-        <p class="mt-5 text-xs opacity-80"><i>* Test 25 candidates for Free</i></p>
+        <p class="mt-5 md:mt-8 text-xs opacity-80"><i>* Test 25 candidates for Free</i></p>
       </div>
       <!-- headline end -->
-      <div class="my-auto mx-auto mt-5">
+      <div class="flex justify-center mt-5 md:ml-auto">
         <img class="h-1/5 drop-shadow-xl" src="./images/hero-illustration.svg" alt="">
       </div>
       </div>    
@@ -79,10 +78,27 @@
       </div>
       <!-- headline end -->
       <!-- logo images start -->
-      <div class="flex items-center justify-center mt-8 md:opacity-50 pb-4 md:pb-8">
-        <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-1.svg" alt="university logo">
-        <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-2.svg" alt="university logo">
-        <img class="mr-auto md:mr-24 h-12 md:h-20" src="./images/partner-logo-3.svg" alt="university logo">
+      <div class="mt-8 md:opacity-90 pb-4 md:pb-8 max-w-xl my-auto mx-auto">
+     <div class="flex justify-between">
+       <!-- logo card start -->
+       <div class="">
+        <img class="mx-auto h-12 md:h-24 mb-4" src="./images/partner-logo-1.svg" alt="university logo">
+        <p class="text-white text-center opacity-90 text-sm">IIT Delhi</p>
+      </div>
+      <!-- logo card end -->
+          <!-- logo card start -->
+          <div class="">
+            <img class="mx-auto h-12 md:h-24 mb-4" src="./images/partner-logo-2.svg" alt="university logo">
+            <p class="text-white text-center opacity-90 text-sm">NMIMS</p>
+          </div>
+          <!-- logo card end -->
+          <!-- logo card start -->
+          <div class="">
+            <img class="mx-auto h-12 md:h-24 mb-4" src="./images/partner-logo-3.svg" alt="university logo">
+            <p class="text-white text-center opacity-90 text-sm">IIT Bombay</p>
+          </div>
+          <!-- logo card end -->
+     </div>
       </div>
       <!-- logo images end -->
      </div>
@@ -102,22 +118,21 @@
             <!-- icons card start  -->
             <div class="p-4 text-center">
               <img class="h-12 md:h-auto mx-auto mb-5 mt-5 md:mt-0" src="./images/clipboard-list.svg" alt="features">
-              <h2 class="mb-3 text-lg md:text-xl font-semibold">Fully Remote changes to Save Travel Costs</h2>
+              <h2 class="mb-3 text-lg md:text-xl font-semibold">Save Travel Costs</h2>
               <p class="text-sm md:text-lg mx-auto">Conduct assessments without having to visit the college. Students can attempt them from their labs or homes.</p>
             </div>
             <!-- icons card end  -->
                   <!-- icons card start  -->
       <div class="p-4 text-center">
         <img class="h-12 md:h-auto mx-auto mb-5 mt-5 md:mt-0" src="./images/question-mark-circle.svg" alt="features">
-        <h2 class="mb-3 text-lg md:text-xl font-semibold">Readymade Tests
-          Ensure no Cheating changes to Ensure No Cheating</h2>
+        <h2 class="mb-3 text-lg md:text-xl font-semibold">Readymade Tests</h2>
         <p class="text-sm md:text-lg mx-auto">For most skills, question banks with hundreds of questions are available. So, you don't need to create any questions.</p>
       </div>
       <!-- icons card end  -->
             <!-- icons card start  -->
             <div class="p-4 text-center">
               <img class="h-12 md:h-auto mx-auto mb-5 mt-5 md:mt-0" src="./images/lock-closed.svg" alt="features">
-              <h2 class="mb-3 text-lg md:text-xl font-semibold">Ensure no cheating</h2>
+              <h2 class="mb-3 text-lg md:text-xl font-semibold">Ensure No Cheating</h2>
               <p class="text-sm md:text-lg mx-auto">We use the world's best proctoring tool AutoProctor to prevent cheating, copying, impersonation and plagiarism detection.</p>
             </div>
             <!-- icons card end  -->
@@ -125,7 +140,7 @@
     <!-- icons end -->
    <!-- button start -->
    <div class="text-center mt-8 md:mt-16">
-    <a href="#">
+    <a href="https://equip.co/pricing/" target="_blank">
       <button class="text-sm md:text-lg px-8 py-2 text-[#1F3B88] font-semibold bg-white rounded-full border">Sign Up for Free</button>
     </a>
   </div>
@@ -138,9 +153,24 @@
       <!-- headline + text start -->
       <div class="mt-8 md:mt-16">
         <h2 class="text-xl md:text-4xl mb-8 font-semibold">What Can Equip Do For You?</h2>
-        <p class="text-sm md:text-lg opacity-90 mb-5">1. Save your time to avoid going through every application to your job or interviewing every candidate that applies to the job.</p>
-        <p class="text-sm md:text-lg opacity-90 mb-5">2. Create an assessment for testing technical and non-technical skills in under a minute using our Question Bank or by importing your own questions.</p>
-        <p class="text-sm md:text-lg opacity-90 mb-5">3. See assessment results real-time and shortlist the top candidates for interviews.</p>
+         <!-- checklist start  -->
+         <div class="flex text-sm md:text-lg mb-8">
+          <img class="mr-4" src="./images/check-circle.svg" alt="">
+          <p>Save your time to avoid going through every application to your job or interviewing every candidate that applies to the job.</p>
+         </div>
+         <!-- checklist end -->
+          <!-- checklist start  -->
+          <div class="flex text-sm md:text-lg mb-8">
+            <img class="mr-4" src="./images/check-circle.svg" alt="">
+            <p>Create an assessment for testing technical and non-technical skills in under a minute using our Question Bank or by importing your own questions.</p>
+           </div>
+           <!-- checklist end -->
+           <!-- checklist start  -->
+           <div class="flex text-sm md:text-lg">
+            <img class="mr-4" src="./images/check-circle.svg" alt="">
+            <p>See assessment results real-time and shortlist the top candidates for interviews.</p>
+           </div>
+           <!-- checklist end -->
       </div>
       <!-- headline + text end -->
       <!-- video start -->
@@ -160,7 +190,7 @@
       <!-- headline end -->
         <!-- button start -->
    <div class="text-center mt-8">
-    <a href="#">
+    <a href="#" target="_blank">
       <button class="text-sm md:text-lg px-8 py-2 text-[#1F3B88] font-semibold bg-white rounded-full border">Start Your Free Trial TODAY!</button>
     </a>
   </div>
@@ -199,7 +229,7 @@
           <!-- hidden text start  -->
           <div class="answer mt-8">
             <p class="mb-5 text-sm md:text-lg">
-              The pricing is based on your usage. You will use one credit for every candidate attempting the assessment. One credit costs Rs. 82. We offer discounts on bulk purchases of credits. For example, you get 40% off on buying 1000 credits. All <a href="https://equip.co/pricing"><u>discounts</u></a> are listed here to Looking for discounts on pricing page
+              The pricing is based on your usage. You will use one credit for every candidate attempting the assessment. One credit costs Rs. 82. We offer discounts on bulk purchases of credits. For example, you get 40% off on buying 1000 credits. All <a href="https://equip.co/pricing" target="_blank"><u>discounts</u></a> are listed here to Looking for discounts on pricing page
             </p>
           </div>
           <!-- hidden text end -->
@@ -261,7 +291,7 @@ You can also create and customise all of the above with your own content.
                             <!-- hidden text start  -->
                             <div class="answer mt-8">
                               <p class="mb-5 text-sm md:text-lg">
-                                Equip is built by the same team that built AutoProctor. All Equip assessments AutoProctor for proctoring and we have successfully conducted <a href="https://workspace.google.com/marketplace/app/timer_+_proctor/691377974459"><u>15 million proctored assessments</u></a> across the world. 
+                                Equip is built by the same team that built AutoProctor. All Equip assessments AutoProctor for proctoring and we have successfully conducted <a href="https://workspace.google.com/marketplace/app/timer_+_proctor/691377974459" target="_blank"><u>15 million proctored assessments</u></a> across the world. 
 
                               </p>
                             </div>
