--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           <span class="hidden md:inline">Hiring </span> 
           <span class="hidden md:inline">to Save Time</span> on</p>
         <div class="words h-8 md:h-14 text-lg md:text-3xl ml-2">
-            <span class="">Travelling</span>
-            <span class=""> Creating Content</span>
-            <span class="">Scheduling Tests</span>
-            <span class="">Grading Manually</span>
-            <span class="">Arranging Supervisors</span>
+            <span class="text-[#FECC2C]">Travelling</span>
+            <span class="text-[#FECC2C]"> Creating Content</span>
+            <span class="text-[#FECC2C]">Scheduling Tests</span>
+            <span class="text-[#FECC2C]">Grading Manually</span>
+            <span class="text-[#FECC2C]">Arranging Supervisors</span>
         </div>
     </div>
    </div>
