--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <span class="hidden md:inline">Hiring </span> 
           <span class="hidden md:inline">to Save Time</span> on</p>
         <div class="words h-6 md:h-9 text-lg md:text-3xl ml-2">
-            <span class="text-[#FECC2C]">Travelling</span>
+            <span class="text-[#FECC2C]">&nbsp;</span>
+            <span class="text-[#FECC2C]">Traveling</span>
             <span class="text-[#FECC2C]"> Creating Content</span>
             <span class="text-[#FECC2C]">Scheduling Tests</span>
             <span class="text-[#FECC2C]">Grading Manually</span>
