--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!-- icons end -->
    <!-- button start -->
    <div class="text-center mt-8 md:mt-16">
-    <a href="https://equip.co/pricing/" target="_blank">
+    <a href="https://workspace.google.com/marketplace/app/timer_+_proctor/691377974459" target="_blank">
       <button class="text-sm md:text-lg px-8 py-2 text-[#1F3B88] font-semibold bg-white rounded-full border">Sign Up for Free</button>
     </a>
   </div>
@@ -191,7 +191,7 @@
       <!-- headline end -->
         <!-- button start -->
    <div class="text-center mt-8">
-    <a href="#" target="_blank">
+    <a href="https://workspace.google.com/marketplace/app/timer_+_proctor/691377974459" target="_blank">
       <button class="text-sm md:text-lg px-8 py-2 text-[#1F3B88] font-semibold bg-white rounded-full border">Start Your Free Trial TODAY!</button>
     </a>
   </div>
