Update heading and layout

--- a/index.html
+++ b/index.html
@@ -33,18 +33,16 @@
       <div class="grid grid-cols-1 md:grid-cols-2 flex items-center">
       <!-- headline -->
       <div class="text-white">
+        <p class="text-xs md:text-sm mb-3 md:mb-4 opacity-70" >— Find Top Talent in Campus Hiring Drives</p>
         <!-- changing text start  -->
-     <div class="text-xl md:text-3xl font-semibold mb-3">
-      <h1 class="pb-2"> Use Equip’s Skill Tests for 
-        <span class="inline md:hidden">Campus to Save Time</span> 
-        <span class="hidden md:inline">Campus</span> 
+     <div class="text-xl md:text-4xl font-semibold mb-3">
+      <h1 class="pb-2"> Equip Tests Save Time on
+       
       </h1>
      
       <div class="wrapper h-8 md:h-8 mb-5 md:mb-8">
-        <p> 
-          <span class="hidden md:inline">Hiring </span> 
-          <span class="hidden md:inline">to Save Time</span> on</p>
-        <div class="words h-6 md:h-9 text-lg md:text-3xl ml-2">
+        <p>Time on</p>
+        <div class="words h-7 md:h-10 text-lg md:text-4xl ml-2">
             <span class="text-[#FECC2C]">&nbsp;</span>
             <span class="text-[#FECC2C]">Traveling</span>
             <span class="text-[#FECC2C]"> Creating Content</span>
@@ -79,7 +77,7 @@
       </div>
       <!-- headline end -->
       <!-- logo images start -->
-      <div class="mt-8 md:opacity-90 pb-4 md:pb-8 max-w-xl my-auto mx-auto">
+      <div class="mt-8 pb-4 md:pb-8 max-w-xl my-auto mx-auto">
      <div class="flex justify-between">
        <!-- logo card start -->
        <div class="">
