--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
         <p class="text-xs md:text-sm mb-3 md:mb-4 opacity-70" >— Find Top Talent in Campus Hiring Drives</p>
         <!-- changing text start  -->
      <div class="text-xl md:text-4xl font-semibold mb-3">
-      <h1 class="pb-2"> Equip Tests Save Time on
-       
-      </h1>
-     
+      <h1 class="pb-2"> Equip Tests Save</h1>
       <div class="wrapper h-8 md:h-8 mb-5 md:mb-8">
         <p>Time on</p>
         <div class="words h-7 md:h-10 text-lg md:text-4xl ml-2">
